# lmang

./: Cargo.toml  LICENSE  RADME.md  README.md  notes
examples/: brainfuck.🆖  cat.🆖
lmang-lib/: Cargo.toml
lmang-lib/examples/: adder_class.🆖  fib_25.🆖  fmt.🆖
lmang-lib/src/: env.rs  error.rs  utils.rs
lmang-lib/src/builtins/: fns.rs  mod.rs  rustfn.rs
lmang-lib/src/builtins/objects/: deque.rs  file.rs  mod.rs  rng.rs  rustobj.rs  sys.rs  types.rs  web.rs
lmang-lib/src/expr/: binding_update.rs  binding_usage.rs  block.rs  break_expr.rs  call.rs  class.rs  func.rs  if_expr.rs  index.rs  literal.rs  loop_expr.rs  mod.rs  named.rs  ref_expr.rs  try_expr.rs
lmang-lib/src/system/: mod.rs  web.rs
lmang-lib/src/val/: dynfunc.rs  dynobject.rs  mod.rs  view.rs  web.rs
lmang-lib/tests/: test_exec_cat.rs  test_exec_common.rs
src/: binding_def.rs  binding_update.rs  builtins.rs  env.rs  error.rs  lib.rs  repl.rs  stmt.rs  system.rs  utils.rs  val.rs
src/builtins/: fns.rs  mod.rs  objects.rs  rustfn.rs
src/builtins/objects/: deque.rs  file.rs  mod.rs  rng.rs  rustobj.rs  sys.rs  types.rs
src/expr/: binding_update.rs  binding_usage.rs  block.rs  break_expr.rs  call.rs  class.rs  func.rs  if_expr.rs  index.rs  literal.rs  loop_expr.rs  mod.rs  named.rs  ref_expr.rs
src/val/: dynfunc.rs  dynobject.rs  mod.rs
tests/: test_exec_brainfuck_hello.rs  test_exec_common.rs
