[package]
name = "lmang"
version = "0.2.0"
edition = "2021"
authors = ["Kamil Koczurek <koczurekk@gmail.com>"]
license = "MIT"

[[bin]]
name = "lmang-repl"
path = "src/bin/repl.rs"

[[bin]]
name = "lmang-exec"
path = "src/bin/exec.rs"

[lib]
name = "lmang_lib"
path = "src/lib.rs"

[dependencies]
rand = {version = "0.8", default-features = false, features = ["small_rng"]}
mimalloc = { version = "0.1.17", default-features = false }
ahash = "0.7"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"