[package]
name = "lmang"
version = "0.2.0"
edition = "2021"
authors = ["Kamil Koczurek <koczurekk@gmail.com>"]
license = "MIT"

[dependencies]
ahash = "0.7"
js-sys = { version = "0.3", optional = true }
mimalloc = { version = "0.1.17", default-features = false, optional = true }
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
strum = { version = "0.23", features = ["derive"] }
thiserror = "1"
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "*", features = ["console"], optional = true }

[features]
web = ["wasm-bindgen", "js-sys", "web-sys"]
native = ["mimalloc"]
default = []

[lib]
name = "lmang_lib"
path = "src/lib.rs"

[[bin]]
name = "lmang-repl"
path = "src/bin/repl.rs"

[[bin]]
name = "lmang-exec"
path = "src/bin/exec.rs"